--- a/glamyze/templates/user/user_dashboard.html
+++ b/glamyze/templates/user/user_dashboard.html
@@ -54,6 +54,14 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-6">
+              <div class="card text-center bg-light mb-3">
+                <div class="card-body">
+                  <h6 class="card-title">Referal Code</h6>
+                  <p class="card-text display-4">{{ user_obj.referral_code }}</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
