--- a/glamyze/templates/user/wallet.html
+++ b/glamyze/templates/user/wallet.html
@@ -33,7 +33,7 @@
                     {% for transaction in transactions %}
                     <tr>
                         <td>#{{ transaction.id }}</td>
-                        <td>{{ transaction.created_at|date:"d M Y" }}</td>
+                        <td>{{ transaction.created_at}}</td>
                         <td>
                             {% if transaction.transacton_type == 'CREDIT' %}
                                 <span class="badge badge-success">{{ transaction.get_transaction_type_display }}</span>
