--- a/glamyze/templates/user/wishlist.html
+++ b/glamyze/templates/user/wishlist.html
@@ -39,7 +39,7 @@
                                     </div>
                                 </td>
                                 <td class="column-2">
-                                    <a style="color: black;" href="{% url 'product_app:product_view' item.product.id %}?size={{item.productvariant.size.id}}">
+                                    <a style="color: black;" href="{% url 'product_app:product_view' item.product.id %}">
                                         {{ item.product.product_name }}
                                     </a>
                                 </td>
