--- a/glamyze/templates/auth_app/signup.html
+++ b/glamyze/templates/auth_app/signup.html
@@ -57,6 +57,10 @@
                                     <label for="phonenumber">Phone number</label>
                                     <input type="text" class="form-control form-control-lg" id="phonenumber" name="phonenumber" value="{{phonenumber}}" required>
                                 </div>
+                                <div class="form-group">
+                                    <label for="phonenumber">Referral Code</label>
+                                    <input type="text" class="form-control form-control-lg" id="referral" name="referral_code" value="{{referral_code}}" >
+                                </div>
 
                                 <div class="form-group">
                                     <label for="password">Password</label>
